rename playmob -> plaiimob. Adapte geolocation for Android, add dashboard code. Add widget to visualise the neighborhood.

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="fr.ifsttar.playmob"
+    package="fr.ifsttar.plaiimob"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
 
     <uses-sdk
         android:minSdkVersion="1"
@@ -18,7 +19,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="fr.ifsttar.playmob.MainActivity"
+            android:name="fr.ifsttar.plaiimob.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,6 +27,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".NeighborhoodActivity"/>
+
         <service android:name=".BeaconRecvService"/>
     </application>
 
